force-app/main/default/objects/Litmos__UserLearningPathResult__c/Litmos__UserLearningPathResult__c.object-meta.xml
<CustomObject>
    <label>User Learning Path Result</label>
    <nameField>
        <displayFormat>ULPR-{00000000}</displayFormat>
        <label>UserLearningPathResults Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Learning Path Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>