force-app/main/default/objects/Litmos__UserLearningPathResult__c/fields/Litmos__CompliantTillDate__c.field-meta.xml
<CustomField>
    <fullName>Litmos__CompliantTillDate__c</fullName>
    <label>Compliant Till Date</label>
    <type>DateTime</type>
</CustomField>