force-app/main/default/objects/Litmos__UserLearningPathResult__c/fields/Litmos__DueDate__c.field-meta.xml
<CustomField>
    <fullName>Litmos__DueDate__c</fullName>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>