force-app/main/default/objects/Litmos__UserLearningPathResult__c/fields/Litmos__FinishDate__c.field-meta.xml
<CustomField>
    <fullName>Litmos__FinishDate__c</fullName>
    <label>Finish Date</label>
    <type>DateTime</type>
</CustomField>