force-app/main/default/objects/Litmos__UserLearningPathResult__c/fields/Litmos__isProcessedUserBatch__c.field-meta.xml
<CustomField>
    <fullName>Litmos__isProcessedUserBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isProcessedUserBatch</label>
    <type>Checkbox</type>
</CustomField>