force-app/main/default/objects/Litmos__UserLearningPathResult__c/fields/Litmos__isProcessedUserCountBatch__c.field-meta.xml
<CustomField>
    <fullName>Litmos__isProcessedUserCountBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isProcessedUserCountBatch</label>
    <type>Checkbox</type>
</CustomField>