force-app/main/default/objects/Litmos__UserLearningPathResult__c/fields/Litmos__LearningPathID__c.field-meta.xml
<CustomField>
    <fullName>Litmos__LearningPathID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Path</label>
    <referenceTo>Litmos__LearningPath__c</referenceTo>
    <relationshipLabel>User Learning Path Results</relationshipLabel>
    <relationshipName>User_Learning_Path_Results</relationshipName>
    <type>Lookup</type>
</CustomField>