force-app/main/default/objects/Litmos__UserLearningPathResult__c/fields/Litmos__LitmosID__c.field-meta.xml
<CustomField>
    <fullName>Litmos__LitmosID__c</fullName>
    <label>Litmos ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>