force-app/main/default/objects/Litmos__UserLearningPathResult__c/fields/Litmos__PercentageComplete__c.field-meta.xml
<CustomField>
    <fullName>Litmos__PercentageComplete__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Percentage Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>